# odoo-xmlrpc-csv-importer

./: .dockerignore  .env.example  .env.local  .gitignore  .md  Dockerfile  README.md  app.py  cache.py  csv_generator.py  docker-compose.yaml  failed_records.csv  main.py  odoo_manager.py  pyproject.toml  rpc.py  stress_test.csv  test.csv  utils.py
application/: odoo_etl.py
data/: 1.csv  100.csv  10000.csv  4000.csv  test.csv
docs/: setup-odoo.md  task.md
infrastructure/: cache_manager.py  csv_manager.py  odoo_client.py
src/odoo_xmlrpc_csv_importer/: main.py
src/odoo_xmlrpc_csv_importer/application/: import_contacts.py  odoo_etl.py  ui.py
src/odoo_xmlrpc_csv_importer/domain/: contact.py
src/odoo_xmlrpc_csv_importer/infrastructure/: config.py  csv_manager.py  import_stats.py  logger.py  odoo_client.py
src/odoo_xmlrpc_csv_importer/services/: reference_cache.py
tests/: conftest.py  test_contact_logic.py  test_contact_schema.py
utils/: utils.py
