[project]
name = "odoo-xmlrpc-csv-importer"
version = "0.1.0"
description = "Script em Python para importação de contatos no Odoo a partir de arquivos CSV, utilizando a API XML-RPC oficial. O foco é automação, controle de duplicidade e eficiência operacional em cenários empresariais."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.13.1",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]
