[project]
name = "odoo-xmlrpc-csv-importer"
version = "0.1.0"
description = "Aplicação em Python para importação de contatos no Odoo a partir de arquivos CSV, utilizando a API XML-RPC oficial. O foco é automação, controle de duplicidade e eficiência operacional em cenários empresariais."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
    "structlog>=25.5.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
etl = "odoo_xmlrpc_csv_importer.main:app"
